--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,19 +16,19 @@
         android:theme="@style/Theme.PKT"
         tools:targetApi="31">
         <activity
-            android:name=".SongByAlbumActivity"
+            android:name=".View.SongByAlbumActivity"
             android:exported="false" />
         <activity
-            android:name=".SongByCategoryActivity"
+            android:name=".View.SongByCategoryActivity"
             android:exported="false" />
         <activity
-            android:name=".CategoryListActivity"
+            android:name=".View.CategoryListActivity"
             android:exported="false" />
         <activity
-            android:name=".SongsByArtistActivity"
+            android:name=".View.SongsByArtistActivity"
             android:exported="false" />
         <activity
-            android:name=".MainActivity"
+            android:name=".View.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -36,11 +36,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".PlayerActivity">
+        <activity android:name=".View.PlayerActivity">
 
             <!-- Có thể thêm các thông tin cấu hình khác nếu cần -->
         </activity>
-        <activity android:name=".ArtistListActivity" />
+        <activity android:name=".View.ArtistListActivity" />
     </application>
 
 </manifest>
